# lexibot

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  IMPLEMENTATION_NOTES.md  README.md  deploy.sh  docker-compose.yml  prompt.md  pyproject.toml  transcript.md  vector.toml
.github/workflows/: ci.yml  deploy.yml
deploy/: bootstrap.sh
deploy/anki-headless/: Dockerfile  README.md  startup.sh
deploy/ansible/: playbook.yml
deploy/backup/: snapshot.sh
docs/: architecture.md  deployment.md  plan.md  test-spec.md  ux-improvement-plan.md
src/lexibot/: __init__.py  __main__.py  app.py  config.py  container.py  logging.py
src/lexibot/anki/: connect.py  media.py  ports.py  upsert.py
src/lexibot/bot/: dispatcher.py  keyboards.py  rendering.py  task_registry.py
src/lexibot/core/: enums.py  exceptions.py  models.py  parsing.py  pipeline.py  runner.py
src/lexibot/db/: engine.py  repositories.py
src/lexibot/llm/: gemini.py  ports.py  prompts.py  schema.py
src/lexibot/tts/: mai_voice.py  ports.py  ssml.py
src/lexibot/worker/: __init__.py  enqueue.py  settings.py  tasks.py
src/vocab_bot/: __init__.py  __main__.py  app.py  config.py  container.py  logging.py
src/vocab_bot/anki/: connect.py  media.py  ports.py  upsert.py
src/vocab_bot/bot/: dispatcher.py  keyboards.py  rendering.py
src/vocab_bot/core/: exceptions.py  models.py  parsing.py  pipeline.py
src/vocab_bot/db/: engine.py  repositories.py  tables.py
src/vocab_bot/llm/: gemini.py  keypool.py  ports.py  prompts.py  schema.py
tests/: conftest.py
tests/unit/: test_anki_query.py  test_config.py  test_enqueue.py  test_keypool.py  test_parsing.py  test_rendering.py  test_ssml.py  test_ux_callbacks.py
(+16 files in other folders)
