[project]
name = "vocab-bot"
version = "0.1.0"
description = "Telegram -> Anki vocabulary bot (Sinhala + English meanings, MAI-Voice-2 TTS, AnkiConnect upsert)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Appledore Labs" }]
dependencies = [
    "aiogram>=3.13",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "arq>=0.26",
    "redis>=5.0",
    "httpx>=0.27",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "google-genai>=0.3",
    "azure-cognitiveservices-speech>=1.40",
    "sqlmodel>=0.0.22",
    "aiosqlite>=0.20",
    "telegramify-markdown>=0.2",
    "structlog>=24.4",
    "tenacity>=9.0",
]

[project.scripts]
vocab-bot = "vocab_bot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vocab_bot"]

[dependency-groups]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "freezegun>=1.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = [
    "azure.*",
    "google.*",
    "telegramify_markdown.*",
    "arq.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
